--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -41,3 +41,4 @@ $container-mobile: 375px;
 
 @import "./partius/utilitarios/colors.scss";
 @import "./partius/utilitarios/mixin.scss";
+@import "./partius/layout/layout.scss";
